--- a/vercel.json
+++ b/vercel.json
@@ -42,12 +42,5 @@
       ]
     }
   ],
-  "functions": {
-    "app/api/**/*.js": {
-      "runtime": "nodejs20.x"
-    }
-  },
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "env": {}
 }
